# land-DA_workflow

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  BuildRunLandDA.html  CMakeLists.txt  Container.html  DASystem.html  Dockerfile  Glossary.html  Introduction.html  Model.html  README.md  TechnicalOverview.html  analdates.sh  analdates_sample.sh  check_ctest.sh  check_gdas_outputs.sh  check_release_outputs.sh  check_test.sh  check_test_passed.sh  config.sh  create_output_dirs.sh  cycle_mods_bash  datm_cdeps_lnd_gswp3_rst  do_submit_cycle.sh  do_submit_test.sh  fort.360  fv3_run  genindex.html  hera.modules  hera_ctest.sh  index.html  issue_template.md  job_card  land_mods  module_check.sh  objects.inv  orion.modules  pull_request_template.md  (+40 more)
.cicd/: Jenkinsfile
.cicd/scripts/: disk_usage.sh  land_build.sh  land_init.sh  land_test.sh
.github/: pull_request_template.md
.github/workflows/: auto_doc._yml  auto_doc.yml  aws.yml  build_ctest.yml  landda_ci_cd._yml  landda_ci_cd.yml
BackgroundInfo/: Introduction.html  TechnicalOverview.html  index.html
BuildingRunningTesting/: BuildRunLandDA.html  Container.html  TestingLandDA.html  index.html
CustomizingTheWorkflow/: ConfigWorkflow.html  DASystem.html  Model.html  index.html
Reference/: FAQ.html  Glossary.html  Rocoto.html  index.html
_sources/: Container.rst.txt  DASystem.rst.txt  Glossary.rst.txt  Introduction.rst.txt  Model.rst.txt  index.rst.txt
_sources/BackgroundInfo/: TechnicalOverview.rst.txt
_sources/BuildingRunningTesting/: Container.rst.txt  TestingLandDA.rst.txt  index.rst.txt
_sources/CustomizingTheWorkflow/: DASystem.rst.txt  Model.rst.txt  index.rst.txt
_sources/Reference/: Glossary.rst.txt  Rocoto.rst.txt
_static/: documentation_options.js
configures/: machine.hera.intel  machine.orion.intel
doc/: Makefile  requirements.txt
doc/source/: conf.py
docs/: README_git  conf.py  example1.py  requirements.txt
docs/source/: BuildRunLandDA.rst  Container.rst  DASystem.rst  Glossary.rst  Introduction.rst  Introduction_v0.rst  Model.rst  Model_v0.rst  TechnicalOverview.rst  UFS_LandDA_users_guide_ch1_v0_rk.rst  Users_guide_ch1_v0.rst  conf.py  index.rst  references.bib
ensemble_pert/: Makefile  README.md  configure  lndp_apply_pert.f90  template.namelist.lndp
ensemble_pert/config/: user_build_config.hera
jobs/: JGLOBAL_LAND_PREP  JGLOBAL_PREP_LAND_OBS  JLANDDA_ANALYSIS  JLANDDA_FORECAST  JLANDDA_PLOT_STATS  JLANDDA_POST_ANAL  JLANDDA_PREP_BMAT  JLANDDA_PREP_EXP  JLANDDA_PREP_OBS  JLANDDA_PRE_ANAL  JLANDDA_RUN_ANA  JLANDDA_RUN_FCST  JLAND_PREP_BMAT  JLAND_PREP_EXP  JLAND_PREP_OBS  JLAND_RUN_ANA  JLAND_RUN_FCST
modulefiles/: build_container_intel.lua  build_hera_intel.lua  build_hercules_intel.lua  build_orion_intel.lua  build_singularity_intel.lua  conda.lua  landda_hera-v1.0.0.intel.lua  landda_hera.intel.lua  landda_orion-v1.0.0.intel.lua  landda_orion.intel.lua  landda_singularity.intel.lua  task_load_modules.sh  ufs_common.lua  ufs_hera.intel.lua  ufs_orion.intel.lua  wflow_hera.lua  wflow_hercules.lua  wflow_orion.lua  wflow_singularity.lua
parm/: conda_environment.yml  get_crontab_contents.py  land_analysis.xml  land_analysis.yaml  land_analysis_era5_hera.yaml  land_analysis_era5_orion.yaml  land_analysis_gswp3_hera.yaml  land_analysis_gswp3_orion.yaml  land_analysis_hera.yaml  land_analysis_hercules.yaml  land_analysis_orion.yaml  land_analysis_singularity.yaml  land_analysis_test.xml  land_da_orion.xml  land_da_orion.yaml  launch_rocoto_wflow.sh  lmod-setup.sh  parm_hera.yaml  parm_hercules.yaml  parm_orion.yaml  parm_xml_hera.yaml  parm_xml_orion.yaml  parm_xml_singularity.yaml  run_container_executable.sh  run_without_rocoto.sh  task_load_modules_run_jjob.sh
parm/jedi/: GHCN.yaml  letkfoi_snow.yaml
parm/templates/: template.coupler.res  template.data_table  template.datm.streams  template.datm_in  template.diag_table  template.input.nml  template.jedi2ufs  template.land_analysis.yaml  template.model_configure  template.plot_hofx.yaml  template.plot_restart.yaml  template.plot_timehistory.yaml  template.tile2vector  template.ufs-noahMP.namelist.era5  template.ufs.configure  template.ufs2jedi  template.vector2tile
restarts/tile/: ufs_land_restart.2013-10-02_23-00-00.tile1.nc  ufs_land_restart.2013-10-02_23-00-00.tile2.nc  (+4 more)
scripts/: exlandda_analysis  exlandda_analysis.sh  exlandda_forecast  exlandda_forecast.sh  exlandda_plot_stats.sh  exlandda_post_anal.sh  exlandda_pre_anal.sh  exlandda_prep_bmat  exlandda_prep_bmat.sh  exlandda_prep_exp  exlandda_prep_exp.sh  exlandda_prep_obs  exlandda_prep_obs.sh
sorc/: CMakeLists.txt  Externals.cfg  app_build.sh
sorc/test/: CMakeLists.txt  apply_jedi_incr.sh  check_ctest.sh  create_bkg_ens.sh  hera_ctest.sh  hercules_ctest.sh  orion_ctest.sh  retrieve_data.sh  run_ctest_platform.sh  run_hera_ctest.sh  run_hercules_ctest.sh  run_orion_ctest.sh  run_ufs_datm_lnd.sh  runtime_vars.sh  test_letkfoi_snowda.sh  test_ufs_land_driver.sh  test_vector2tile.sh
sorc/test/ci/: Dockerfile  Jenkinsfile
sorc/test/parm/: ufs.configure
sorc/test/testinput/: template.vector2tile
sorc/tile2tile_converter.fd/: Makefile  configure  namelist_mod.f90
test/: CMakeLists.txt  README.md  apply_jedi_incr.sh  compare.py  comparelib.py  do_ghcn2ioda.sh  ghcn_snod2ioda.py  orion_ctest.sh  retrieve_data.sh  run_orion_ctest.sh  run_ufs_datm_lnd.sh  runtime_vars.sh  test_compare.py  test_jediincr.pf  test_letkfoi_snowda.sh  test_ufs_land_driver.sh  test_vector2tile.sh
test/ci/: Dockerfile  Jenkinsfile
tile2tile/: CMakeLists.txt  tile2tile_driver.f90  tile2tile_restart_mod.f90
tile2tile/config/: user_build_config.gfortran.serial
ush/: compare.py  hofx_analysis_stats.py  letkf_create_ens.py  plot_analysis_timehistory.py  plot_forecast_restart.py
vector2tile/: .gitignore  CMakeLists.txt  README.md  namelist.lndp2vector  namelist.vector2tile  vector2tile_driver.f90  vector2tile_perturbation_mod.f90  vector2tile_restart_mod.f90
versions/: build.ver_hera  build.ver_hercules  build.ver_orion  run.ver_hera  run.ver_hercules  run.ver_orion
(+49 files in other folders)
